[package]
name = "bevy_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2"
wgpu = { version = "0.19", features = ["webgl", "wgsl"], default-features = false }

[lib]
crate-type = ["cdylib"]